force-app/main/default/objects/ChurnSignals__b/ChurnSignals__b.object-meta.xml
<CustomObject>
    <label>Churn Signal</label>
    <pluralLabel>Churn Signals</pluralLabel>
    <indexes>
        <fields>
            <name>CustomerId__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <fields>
            <name>SignalTimestamp__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <fullName>CustomerSignalIndex</fullName>
        <label>Customer Signal Index</label>
    </indexes>
</CustomObject>