force-app/main/default/objects/ChurnSignals__b/fields/CompositeRiskScore__c.field-meta.xml
<CustomField>
    <fullName>CompositeRiskScore__c</fullName>
    <label>Composite Risk Score</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>