force-app/main/default/objects/ChurnSignals__b/fields/EngagementRiskScore__c.field-meta.xml
<CustomField>
    <fullName>EngagementRiskScore__c</fullName>
    <label>Engagement Risk Score</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>