force-app/main/default/objects/ChurnSignals__b/fields/FrequencyRiskScore__c.field-meta.xml
<CustomField>
    <fullName>FrequencyRiskScore__c</fullName>
    <label>Frequency Risk Score</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>