force-app/main/default/objects/ChurnSignals__b/fields/MonetaryRiskScore__c.field-meta.xml
<CustomField>
    <fullName>MonetaryRiskScore__c</fullName>
    <label>Monetary Risk Score</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>