force-app/main/default/objects/ChurnSignals__b/fields/RecencyRiskScore__c.field-meta.xml
<CustomField>
    <fullName>RecencyRiskScore__c</fullName>
    <label>Recency Risk Score</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>