force-app/main/default/objects/ChurnSignals__b/fields/RiskBucket__c.field-meta.xml
<CustomField>
    <fullName>RiskBucket__c</fullName>
    <label>Risk Bucket</label>
    <length>50</length>
    <type>Text</type>
</CustomField>