force-app/main/default/objects/ChurnSignals__b/fields/SignalTimestamp__c.field-meta.xml
<CustomField>
    <fullName>SignalTimestamp__c</fullName>
    <label>Signal Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>