force-app/main/default/objects/ChurnSignals__b/fields/SupportRiskScore__c.field-meta.xml
<CustomField>
    <fullName>SupportRiskScore__c</fullName>
    <label>Support Risk Score</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>